--- a/desafio-aerolab/front/package.json
+++ b/desafio-aerolab/front/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "hover.css": "^2.3.2",
+    "material-table": "^1.69.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
